# portfolio

./: pyproject.toml  requirements.txt
app/: __init__.py  portfolio.py
app/static/: style.css
app/templates/: base.html
app/templates/portfolio/: index.html  section-first.html  section-second.html  section-third.html  sent_mail-section.html
