[tool.poetry]
name = "web-portfolio"
version = "0.1.0"
description = ""
authors = ["Pablo Carrazana"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
waitress = "^2.1.2"
sendgrid = "^6.10.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
